[package]
name = "prusst"
description = "A convenient interface to the UIO kernel module for TI Programmable Real-time Units."
keywords = ["pru", "pruss", "beaglebone", "embedded"]
readme = "README.md"
license = "MIT/Apache-2.0"
version = "1.0.0"
authors = ["Serge Barral <serge.barral@quintescience.com>"]
repository = "https://github.com/sbarral/prusst"
homepage = "https://github.com/sbarral/prusst"
documentation = "https://sbarral.github.io/prusst-doc/prusst"

[lib]
name = "prusst"

[dependencies]
libc = "0.2"

[dev-dependencies]
crossbeam = "0.3"
